--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_OAUTH_ID=your-oauth-id
+GOOGLE_OAUTH_KEY=your-oauth-key
+
+DISCORD_WEBHOOK_URL= webhook-url
