feat:creating crud of roles and permissions, to be managed by the administrator

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_OAUTH_ID=your_google_oauth_id
+GOOGLE_OAUTH_KEY=your_google_oauth_key
+GOOGLE_REDIRECT_URI=https://your_domain/google-callback
+DISCORD_WEBHOOK_URL=your_discord_webhook_url
