--- a/.env.example
+++ b/.env.example
@@ -68,4 +68,4 @@ VITE_APP_NAME="${APP_NAME}"
 GOOGLE_OAUTH_ID=your-oauth-id
 GOOGLE_OAUTH_KEY=your-oauth-key
 
-DISCORD_WEBHOOK_URL= webhook-url
+DISCORD_WEBHOOK_URL=webhook-url
