--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,7 @@ GOOGLE_OAUTH_ID=your-oauth-id
 GOOGLE_OAUTH_KEY=your-oauth-key
 
 DISCORD_WEBHOOK_URL=webhook-url
+
+CLOUDINARY_URL=cloudinary://API_KEY:API_SECRET@CLOUD_NAME
+CLOUDINARY_UPLOAD_PRESET=your_upload_preset
+CLOUDINARY_NOTIFICATION_URL=
