--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
+        "mercadopago/dx-php": "^3.0",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
