--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Install PHPStan
+      run: composer require --dev phpstan/phpstan
+
+    - name: Run PHPStan analysis
+      run: vendor/bin/phpstan analyse --memory-limit=1G
+
     - name: Set up PHP
       uses: shivammathur/setup-php@v3
-      with: 
+      with:
         php-version: 8.2
         extensions: mbstring, pdo, bcmath
         coverage: none
 
     - name: Install Composer dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
+
+    - name: Generate application key
+      run: php artisan key:generate
+
+    - name: Run tests
+      run: php artisan test
